--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="rockPaperScissors.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="rockPaperScissors.js" defer></script>
+    <script src="myscript.js" defer></script>
 </head>
 <body>
-    
+    <div id = 'header'>
+        <h1>Rock Paper Scissors!</h1>
+    </div>
+    <div id = 'middle'>
+        <div id = 'main'></div>
+        <!--<div id = 'right'></div>-->
+    </div>
+    <div id = 'footer'>
+
+    </div>
 </body>
 </html>
