Uploading to grab on laptop.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
     <div id='mainContainer'>
         <div id='gameboy'>
-            <div id='viewscreen'></div>
+            <div id='viewscreen'>
+                <div id='viewContainer'>
+                    <div class='loadingText'>Rock Paper Scissors!</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
