--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="rockPaperScissors.js" defer></script>
-    <script src="myscript.js" defer></script>
+    <script src="UI-manager.js" defer></script>
 </head>
 <body>
-    <div id = 'header'>
-        <h1>Rock Paper Scissors!</h1>
-    </div>
-    <div id = 'middle'>
-        <div id = 'main'></div>
-        <!--<div id = 'right'></div>-->
-    </div>
-    <div id = 'footer'>
+    <div id='mainContainer'>
+        <div id='dummy'></div>
+        <div id='mainScreen'><h1></h1>
+            <!-- <img src="images/gb-background.png" alt="gameboy background" id = "gbBackground"> -->
+            <div id='viewScreen'></div>
+        </div>
 
     </div>
 </body>
