--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <title>Rock Poké Scissors</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animations.css">
     <script src="scenes.js" defer></script>
     <script src="ui-manager.js" defer></script>
+    <script src="slowText.js" defer></script>
     <script src="main.js" defer></script>
 </head>
 
@@ -18,18 +20,20 @@
             <div id='viewscreen'>
                 <div id='sc_title'>
                     <div class='radialBackground'></div>
-                    <div class = 'titleContainer'>
-                        <div class='titleText'>Rock Paper Scissors</div>
-                        <div class = 'titlePressAny'>Press any button</div>
+                    <div class='titleContainer'>
+                        <div class='titleText'>Rock Poké Scissors</div>
+                        <div class='titlePressAny'>Press the 'any' key!</div>
                     </div>
                 </div>
-                <div id = 'sc_helloThere' class = 'hidden'>
-                    <div class = 'odin'></div>
+                <div id='sc_helloThere' class='hidden'>
+                    <div class = 'odinContainer bounce'>
+                        <div class='odin'></div>
+                    </div>
                     <div class='bottomContainer'>
                         <div class='bottomTextBox'></div>
                     </div>
                 </div>
-                <div id = 'sc_nameSelect' class = 'hidden'>
+                <div id='sc_nameSelect' class='hidden'>
 
                 </div>
             </div>
