transfer back to laptop

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="scenes.js" defer></script>
     <script src="ui-manager.js" defer></script>
     <script src="slowText.js" defer></script>
+    <script src="players.js" defer></script>
     <script src="main.js" defer></script>
 </head>
 
@@ -33,8 +34,12 @@
                         <div class='bottomTextBox'></div>
                     </div>
                 </div>
-                <div id='sc_nameSelect' class='hidden'>
-
+                <div id='sc_characterSelect' class='hidden'>
+                    <div class = 'arrow'><</div>
+                    <div class = 'characterDisplay'>
+                        <div id = 'characterImage'></div>
+                    </div>
+                    <div class = 'arrow'>></div>
                 </div>
             </div>
         </div>
