added character select buttons and changed style a bit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div id='sc_helloThere' class='hidden'>
-                    <div class = 'odinContainer bounce'>
+                    <div class='odinContainer bounce'>
                         <div class='odin'></div>
                     </div>
                     <div class='bottomContainer'>
@@ -35,11 +35,19 @@
                     </div>
                 </div>
                 <div id='sc_characterSelect' class='hidden'>
-                    <div class = 'arrow'><</div>
-                    <div class = 'characterDisplay'>
-                        <div id = 'characterImage'></div>
+                    <div class="arrowContainer left">
+                        <div class='arrow'>&lt</div>
                     </div>
-                    <div class = 'arrow'>></div>
+                    <div id='characterSelectContainer'>
+                        <div class='characterDisplay'>
+                            <div id='characterImage'>
+                            </div>
+                        </div>
+                        <div id='imageSelect'>Select</div>
+                    </div>
+                    <div class='arrowContainer right'>
+                        <div class='arrow'>></div>
+                    </div>
                 </div>
             </div>
         </div>
