--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class='odin'></div>
                     </div>
                     <div class='bottomContainer'>
-                        <div class='bottomTextBox'></div>
+                        <div class='bottomTextBox pokeBorder'></div>
                     </div>
                 </div>
                 <div id='sc_characterSelect' class='hidden'>
@@ -48,6 +48,34 @@
                     <div class='arrowContainer right'>
                         <div class='arrow'>></div>
                     </div>
+                </div>
+                <div id='sc_battle' class='hidden'>
+
+
+                    <div class='bottomContainer'>
+                        <div class='bottomTextBox pokeBorder'></div>
+                        <div id='bottomMenu' class='pokeBorder'>
+                            <tr class = 'menuButtonRow'>
+                                <td>></td>
+                                <td>Rock</td>
+                                <td>></td>
+                                <td>Paper</td>
+                            </tr>
+                            <tr class = 'menuButtonRow'>
+                                <td>></td>
+                                <td>Scissor</td>
+                                <td>></td>
+                                <td>Run</td>
+                            </tr>
+                            <!-- <div id='menuButton1' class='menuButton'><div id='buttonSelector1'>></div>Rock</div>
+                                <div id='menuButton2' class='menuButton'><div id='buttonSelector2'>></div>Paper</div>
+                            </div>
+                            <div class='menuButtonRow'>
+                                <div id='menuButton4' class='menuButton'><div id='buttonSelector4'>></div>Cut</div>
+                                <div id='menuButton3' class='menuButton'><div id='buttonSelector3'>></div>Run</div> -->
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
