sc_battle now has hover and click

--- a/index.html
+++ b/index.html
@@ -55,24 +55,20 @@
                     <div class='bottomContainer'>
                         <div class='bottomTextBox pokeBorder'></div>
                         <div id='bottomMenu' class='pokeBorder'>
-                            <tr class = 'menuButtonRow'>
-                                <td>></td>
-                                <td>Rock</td>
-                                <td>></td>
-                                <td>Paper</td>
-                            </tr>
-                            <tr class = 'menuButtonRow'>
-                                <td>></td>
-                                <td>Scissor</td>
-                                <td>></td>
-                                <td>Run</td>
-                            </tr>
-                            <!-- <div id='menuButton1' class='menuButton'><div id='buttonSelector1'>></div>Rock</div>
-                                <div id='menuButton2' class='menuButton'><div id='buttonSelector2'>></div>Paper</div>
-                            </div>
-                            <div class='menuButtonRow'>
-                                <div id='menuButton4' class='menuButton'><div id='buttonSelector4'>></div>Cut</div>
-                                <div id='menuButton3' class='menuButton'><div id='buttonSelector3'>></div>Run</div> -->
+                            <table>
+                                <tr class='menuButtonRow'>
+                                    <td id='buttonArrow0'>></td>
+                                    <td id='button0' data-key = 0>Rock</td>
+                                    <td id='buttonArrow1' class='invisible'>></td>
+                                    <td id='button1' data-key = 1>Paper</td>
+                                </tr>
+                                <tr class='menuButtonRow'>
+                                    <td id='buttonArrow2' class='invisible'>></td>
+                                    <td id='button2' data-key = 2>Scissor</td>
+                                    <td id='buttonArrow3' class='invisible'>></td>
+                                    <td id='button3' data-key = 3>Run</td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
 
