Finished battle screen UI

--- a/index.html
+++ b/index.html
@@ -52,7 +52,18 @@
                 <div id='sc_battle' class='hidden'>
                     <div id='battleScreen'>
                         <div class='bScreenRow'>
-                            <div class='battleInfo' id='bEnemyInfo'></div>
+                            <div class='battleInfo' id='bEnemyInfo'>
+                                <div id='bEnemyName'>Enemy</div>
+                                <div id='bEnemyLevel'>:L6</div>
+                                <div id='bEnemyBorder'>
+                                    <div id='bEnemyHP'>
+                                        <div>HP:</div>
+                                        <div id='bEnemyHPBar'>
+                                            <div id='bEnemyHPFill'></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class='bScreenSection battleIcon' id='bEnemyIcon'></div>
                         </div>
                         <div class='bScreenRow'>
@@ -64,9 +75,11 @@
                                     <div class='unDirection'>
                                         <div id='bPlayerHP'>
                                             <div>HP:</div>
-                                            <div id='bPlayerHPBar'></div>
+                                            <div id='bPlayerHPBar'>
+                                                <div id='bPlayerHPFill' ></div>
+                                            </div>
                                         </div>
-                                        <div id='bPlayerHPText'>15/19</div>
+                                        <div id='bPlayerHPText'>19/19</div>
                                     </div>
                                 </div>
                             </div>
