--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="animations.css">
     <script src="players.js" defer></script>
     <script src="scenes.js" defer></script>
+    <script src="battle.js" defer></script>
     <script src="ui-manager.js" defer></script>
     <script src="slowText.js" defer></script>
     <script src="main.js" defer></script>
