Added popuptextbox and listeners to battle scene.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class='bottomContainer'>
                         <div class='bottomTextBox pokeBorder'></div>
                         <div id='bottomMenu' class='pokeBorder'>
@@ -105,7 +106,7 @@
                             </table>
                         </div>
                     </div>
-
+                    <div id = 'popupTextBox' class = 'invisible'></div>
                 </div>
             </div>
         </div>
