Almost done. Need to make endscreen appear after removing the popupTextBox

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="players.js" defer></script>
     <script src="scenes.js" defer></script>
     <script src="battle.js" defer></script>
-    <script src="ui-manager.js" defer></script>
     <script src="slowText.js" defer></script>
     <script src="main.js" defer></script>
 </head>
@@ -33,6 +32,7 @@
                     </div>
                     <div class='bottomContainer'>
                         <div class='bottomTextBox pokeBorder'></div>
+                        <div id = 'typeHere' class = 'invisible'>Type your name here</div>
                     </div>
                 </div>
                 <div id='sc_characterSelect' class='hidden'>
