added semicolon to character reference. Worked, but caused an error.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div id='sc_characterSelect' class='hidden'>
                     <div class="arrowContainer left">
-                        <div class='arrow'>&lt</div>
+                        <div class='arrow'>&lt;</div>
                     </div>
                     <div id='characterSelectContainer'>
                         <div class='characterDisplay'>
